# ivyos

./: LICENSE  README.md  flake.nix
.github/workflows/: rust-ci.yml
archive/swaync/: config.json
archive/waybar/: colors.css
archive/waybar/modules/: info.jsonc  time.jsonc
home/: desktop.nix  home.nix  ivory.nix  ivy.nix  laptop.nix
hosts/desktop/: configuration.nix  desktop.nix  hardware-configuration.nix
hosts/izanagi/: configuration.nix  desktop.nix  hardware-configuration.nix
hosts/laptop/: configuration.nix  hardware-configuration.nix
hosts/mikoshi/: configuration.nix  desktop.nix  hardware-configuration.nix
ivyshell/: ivyshell.nix
ivyshell/.config/fish/: fish_variables
ivyshell/.config/gtk-3.0/: bookmarks  colors.css
ivyshell/.config/gtk-4.0/: custom-overrides.css  gtk.css
ivyshell/.config/helix/: config.toml  language.toml
ivyshell/.config/ivyshell/: bar.css  (+3 more)
ivyshell/greeter/: Greeter.qml  Main.qml  shell.qml  theme.conf
ivyshell/niri/: colors.kdl  inputs.kdl
ivyshell/scripts/: apply-theme.sh  targets.json
ivyshell/shell/: launcher_data.json  shell.qml
ivyshell/shellv2/: Cargo.toml  package.nix
ivyshell/shellv2/src/: main.rs  services.rs
ivyshell/shellv2/src/core/: client.rs  server.rs
ivyshell/shellv2/src/services/: audio.rs  battery.rs  bluetooth.rs  brightness.rs  clock.rs  config.rs  media.rs  network.rs  night_light.rs  theme.rs  weather.rs
modules/: appearance.nix  common.nix  creative.nix  gaming.nix  ivyshell.nix  keyd.nix  llms.nix  niri.nix  nixvim.nix
profiles/todo/: colors
todo/: colors  todo.md
(+334 files in other folders)
