[package]
name = "shellv2"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
cargo-watch = "8.5.3"
mpris = { version = "2", features = [] }
